projects/vb6parse/snapshots/tests/statements/objects/events/raiseevent_statement_with_named_arguments.snap
---
source: projects/vb6parse/tests/statements/objects/events.rs
assertion_line: 305
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RaiseEventStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RaiseEventKeyword
                  text: RaiseEvent
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: DataUpdate
                - kind: LeftParenthesis
                  text: (
                - kind: Identifier
                  text: index
                - kind: ColonOperator
                  text: ":"
                - kind: EqualityOperator
                  text: "="
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: value
                - kind: ColonOperator
                  text: ":"
                - kind: EqualityOperator
                  text: "="
                - kind: IntegerLiteral
                  text: "100"
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
